@@ -1,9 +1,16 @@
 use strict;
 use warnings;
-use Test::More tests => 14;
+use Test::More tests => 15;
 use Test::Deep;
 use Test::Exception;
-use Test::NoWarnings;
+use Test::NoWarnings qw( clear_warnings had_no_warnings );
+
+# silly workaround for spurious warning message generated by List::MoreUtils
+# 0.33_005; note that we do not depend on List::MoreUtils directly, but
+# probably some module that we depend on does require it
+had_no_warnings;
+require List::MoreUtils;
+clear_warnings;
 
 # force reloading Test::PDL on next 'require' + wipe functions living in the
 # Test::PDL namespace to avoid redefinition warnings
