@@ -2,6 +2,9 @@ Revision history for Test::PDL
 
 {{$NEXT}}
 
+ - try to work around a warning message generated by List::MoreUtils 0.33_005
+   which made the tests fail on platforms with this version (Edward Baudrez)
+
 0.07      2013-02-12
 
  - try to work around spurious warning messages emitted in some tests (Edward
